tests/types/errors/function_closure_param_count_mismatch.mog
var bad fn(i32) i32 = fn(x i32, y i32) i32 {
  return x + y;
};
